--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My First Github Repo</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h3>Hi</h3>
+    <div>
+      <h2>My Simple Website</h2>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae
+        excepturi ex totam soluta. Voluptas voluptatem debitis ipsum vel. Eos,
+        rem.
+      </p>
+    </div>
   </body>
 </html>
