--- a/index.html
+++ b/index.html
@@ -15,5 +15,12 @@
         rem.
       </p>
     </div>
+    <div>
+      <h3>We love to eat protein</h3>
+      <img
+        src="images/470991446_1162826155202137_155729405856861233_n.jpg"
+        alt=""
+      />
+    </div>
   </body>
 </html>
