--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div>
+    <div class="container">
       <h2>My Simple Website</h2>
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae
@@ -19,7 +19,7 @@
       <h3>We love to eat protein</h3>
       <img
         src="images/470991446_1162826155202137_155729405856861233_n.jpg"
-        alt=""
+        alt="Meme Pitcure"
       />
     </div>
   </body>
