added 3rd image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My First Github Repo</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="icon"
+      href="images/467777213_1276551403666556_3234707764563004435_n.jpg"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div class="container">
@@ -24,6 +29,10 @@
       <img
         src="images/467777213_1276551403666556_3234707764563004435_n.jpg"
         alt="Cat meme!"
+      />
+      <img
+        src="images/WhatsApp Image 2024-11-26 at 22.14.06_18e7c1f5.jpg"
+        alt="He he!"
       />
     </div>
   </body>
